--- a/Android/app/src/main/res/menu/navi_items.xml
+++ b/Android/app/src/main/res/menu/navi_items.xml
@@ -6,7 +6,7 @@
         android:title="공지사항" />
 
     <item
-        android:id="@+id/focus"
+        android:id="@+id/schedule"
         android:icon="@drawable/calendar"
         android:title="학사일정" />
 
