--- a/Android/app/src/main/res/layout/fragment_more.xml
+++ b/Android/app/src/main/res/layout/fragment_more.xml
@@ -3,4 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".navigation.MoreFragment" />
+    tools:context=".navigation.MoreFragment">
+
+    <ListView
+        android:id="@+id/more_ListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+</FrameLayout>
