--- a/Android/app/src/main/res/menu/navi_items.xml
+++ b/Android/app/src/main/res/menu/navi_items.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/home"
+        android:icon="@drawable/home"
+        android:title="홈" />
+    <item
         android:id="@+id/notification"
         android:icon="@drawable/notification"
         android:title="공지사항" />
