--- a/Android/app/src/main/res/values/themes.xml
+++ b/Android/app/src/main/res/values/themes.xml
@@ -45,4 +45,14 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">#000000</item>
     </style>
+
+    <style name="Urgent_Notice">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
+
+    <style name="all_Notice">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">#FFFFFF</item>
+    </style>
 </resources>
